force-app/main/default/objects/Contact/fields/Sales_Agent__c.field-meta.xml
<CustomField>
    <fullName>Sales_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>